namespace LawyerApp.Domain.Aggregates.DocumentAggregate;

public enum DocCategory
{
    Petition,        // Petição
    Contract,        // Contrato
    Correspondence,  // Correspondência
    Evidence,        // Prova
    CourtOrder       // Decisão Judicial
}