namespace LawyerApp.Domain.Aggregates.LegalProcessAggregate
{
    public enum ProcessStatus
    {
        Open,
        InAnalysis,
        Closed
    }
}
